[package]
name = "dimigomeal-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.13"
chrono = "0.4.38"
chrono-tz = "0.9.0"
jsonwebtoken = "8.1"
regex = "1.10.4"
rustls = "0.22.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
visdom = "1.0.0"
